--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tabler/icons-react": "^3.31.0",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
