--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "react-transition-group": "^4.4.5",
     "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
